변경된점 ComplaintController 작성하기, 페이징처리 추가 complaint_board.jsp 페이징처리(미완성)
complaint_select
폼 작성후 /getlist로 이동

complaint_select.css
입력칸 길이 늘림

ComplaintMapper.xml 및 인터페이스
getlistwithpaging 추가

ComplaintService&Impl
getlist ->getlistwithpaging으로 변경

--- a/Aptogether/src/main/webapp/resources/css/complaint_select.css
+++ b/Aptogether/src/main/webapp/resources/css/complaint_select.css
@@ -86,19 +86,22 @@
 	color: #222;
 	
 }
-#modal {
+ #modal {
+	 text-align: center	
 	background-color: #FFFFF;
 	position:absolute;
- 	 width:52%;
-  	height:70%;
+ 	 width:100%;	
+  	height:100%;
  	 z-index:1;
  	 background:rgba(0, 0, 0, 0.5);
- 	 display: inline-block;
- 	 text-align: center;
- 	margin: 0 auto;
- 	left: 24%;
  	display: none;
+ 		 display: inline-block;
+ 		margin: 0 auto;
+} 
+.has-float-label{
+width: 100%;	 
 }
+
 .mustdo{
 	color: #F0FFFF;
 }
