1. fullcalendar.min.css => popover 의 title css 적용 2. fullcalendar.min.js => popover의 title css 적용을 위한 id값 적용(fc-title-pop-title) 3. main.css => 일정 블록이 붙어있는 관계로 margin-top 적용

--- a/Aptogether/src/main/webapp/resources/css/main.css
+++ b/Aptogether/src/main/webapp/resources/css/main.css
@@ -188,6 +188,7 @@ body {
   padding: 5px 10px 5px 10px;
   font-family: 'Roboto', sans-serif;
   margin-left: -1px;
+  margin-top: 3px;
   height: 100%;
 }
 
