--- a/Aptogether/src/main/webapp/resources/css/complaint_board.css
+++ b/Aptogether/src/main/webapp/resources/css/complaint_board.css
@@ -16,7 +16,10 @@
 	color: #C0C0C0;
 	margin-top: 40px;
 }
-
+.pagination{
+	display:flex;
+	justify-content: center;
+}
  /* .button{
 	width:120px;
 	height:55px;
@@ -37,23 +40,82 @@
 
 }  */
 
-.example_c {
-color: #494949 !important;
-text-decoration:none;
-text-transform: uppercase;
-background: #ffffff;
-padding: 20px;
-border: 4px solid #494949 !important;
-display: inline-block;
-transition: all 0.4s ease 0s;
+#buttonArea{
+padding: 2em;
+}
+html,body{
+  height:100%;
+}
+body{
+  text-align:center;
+}
+	
+body:before{
+  content:'';
+  height:100%;
+  display:inline-block;
+  vertical-align:middle;
+}
+button{
+  background:#1AAB8A;
+  color:#fff;
+  border:none;
+  position:relative;
+  height:60px;
+  font-size:1.6em;
+  padding:0 2em;
+  cursor:pointer;
+  transition:800ms ease all;
+  outline:none;
+}
+button:hover{
+  background:#fff;
+  color:#1AAB8A;
+}
+button:before,button:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #1AAB8A;
+  transition:400ms ease all;
+}
+button:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+button:hover:before,button:hover:after{
+  width:100%;
+  transition:800ms ease all;
+}
+.btn-1:hover {
+font-size:0;
+}
 
+.btn-1:hover:before {
+    content: '¹Î¿øÃë¼Ò';
+    background-color: red;
+    
 }
-.example_c:hover {
-color: #ffffff !important;
-background: #f6b93b;
-border-color: #f6b93b !important;
-transition: all 0.4s ease 0s;
+
+
+
+
+/* .example_c span:nth-child(1) {
+	color: #fff;
+	
 }
+.example_c span:nth-child(2) {
+	color: #E74C3C;
+	
+}
+ .example_c:hover span:nth-child(2) {
+    
+}  */
 .example_f {
    border-radius: 4px;
    background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%); !important; 
